Fix java 8 compilation